# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.569 2006/02/10 23:01:21 rocket Exp $

  10 Feb 2006; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Allow multiple overlays for root_overlay and overlay spec option

  10 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  -livecd/cdtar/yaboot-1.3.11-ppc-cdtar-r1.tar.bz2,
  +livecd/cdtar/yaboot-1.3.11-ppc64-cdtar-r1.tar.bz2, catalyst,
  targets/support/rc-update.sh:
  Updated ppc64's cdtar file with a new boot.msg, removed older file, and
  fixed bug #122154. This is catalyst 2.0_rc36.

  09 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  livecd/files/livecd.motd.txt, targets/support/livecdfs-update.sh:
  Updated the LiveCD motd to tell the user to run the display manager again,
  rather than startx, while mentioning that startx is useful as a rescue X
  session since it starts twm. This is catalyst 2.0_rc35.

  09 Feb 2006; Eric Edgar <rocket@gentoo.org> targets/support/create-iso.sh:
  Add hfs-hide options to mkisofs so macs boot

  09 Feb 2006; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Fix indentation issues

  08 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is 2.0_rc34.

  08 Feb 2006; Eric Edgar <rocket@gentoo.org>
  targets/support/bootloader-setup.sh:
  add additional console less entry when consoles are chosen for ppc64

  08 Feb 2006; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  fix kernelopts and extraversion env variable exports

  08 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/livecdfs-update.sh:
  Rearranged generation of /usr/livecd/systempkgs.txt for the LiveCD. Thanks
  to Andrew Gaffney for spotting this.  This is 2.0_rc33.

  07 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/kmerge.sh: