@@ -61,6 +61,12 @@ genkernel_compile(){
 	#echo ${GK_ARGS}	
 	export clst_kernel_merge
 	export clst_initramfs_overlay
+	# Build our list of kernel packages
+	if [ "${clst_livecd_type}" = "gentoo-release-livecd" -a "$clst_kernel_merge" != ""]
+	then
+		mkdir -p /usr/livecd
+		echo "${clst_kernel_merge}" > /usr/livecd/kernelpkgs.txt
+	fi
 	# Build with genkernel using the set options
 	# callback is put here to avoid escaping issues
 	if [ -n "${clst_KERNCACHE}" ]
@@ -77,11 +83,6 @@ genkernel_compile(){
 		then
 			genkernel --callback="emerge ${clst_kernel_merge}" \
 				${GK_ARGS} || exit 1
-			if [ "${clst_livecd_type}" = "gentoo-release-livecd" ]
-			then
-				mkdir -p /usr/livecd
-				echo "${clst_kernel_merge}" > /usr/livecd/kernelpkgs.txt
-			fi
 		else
 			genkernel ${GK_ARGS} || exit 1
 		fi
