@@ -1,5 +1,11 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.569 2006/02/10 23:01:21 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.570 2006/02/13 22:26:44 wolf31o2 Exp $
+
+  13 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
+  targets/livecd-stage1/livecd-stage1-controller.sh,
+  targets/support/kmerge.sh, targets/support/livecdfs-update.sh:
+  Fixed generation of grppkgs.txt and kernelpkgs.txt for the Installer. This
+  is 2.0_rc37.
 
   10 Feb 2006; Eric Edgar <rocket@gentoo.org>
   modules/generic_stage_target.py:
